fix: super categories - overflow of background image

--- a/less/ariastel-styles.less
+++ b/less/ariastel-styles.less
@@ -155,6 +155,7 @@ main {
     right: 0;
     bottom: 0;
     left: 0;
+    overflow: hidden;
   }
 
   &__bg {
